main/hunspell: fix CVE-2019-16707
fixes #11101

--- a/main/hunspell/APKBUILD
+++ b/main/hunspell/APKBUILD
@@ -1,15 +1,21 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=hunspell
 pkgver=1.6.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Spell checker and morphological analyzer library and program"
 url="https://hunspell.github.io/"
 arch="all"
 license="GPL-2.0-or-later LGPL-2.0-or-later MPL-1.1"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 makedepends="gettext-dev ncurses-dev readline-dev autoconf automake libtool"
-source="$pkgname-$pkgver.tar.gz::https://github.com/hunspell/hunspell/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/hunspell/hunspell/archive/v$pkgver.tar.gz
+	CVE-2019-16707.patch
+	"
 builddir="$srcdir/$pkgname-$pkgver"
+
+# secfixes:
+#   1.6.2-r2:
+#     - CVE-2019-16707
 
 prepare() {
 	cd "$builddir"
@@ -40,4 +46,5 @@ package() {
 	make -j1 DESTDIR="$pkgdir" install
 }
 
-sha512sums="a23127f1271da95ac06a1fb2f57b659485e959567b61da05b2bb350684003a0fb7e882b5e524c465fd890f79f513ed03174f38611989a1c09081147c47d6da11  hunspell-1.6.2.tar.gz"
+sha512sums="a23127f1271da95ac06a1fb2f57b659485e959567b61da05b2bb350684003a0fb7e882b5e524c465fd890f79f513ed03174f38611989a1c09081147c47d6da11  hunspell-1.6.2.tar.gz
+e7674819a9da4c3d742d34338d68d137d8613f97be2d25bf20db5219d4dd626f59a63ed4757b92f34307f499f2d687014065cdea97b55c98db295a8290300d2d  CVE-2019-16707.patch"
