main/python2: security fix (CVE-2019-16935)
fixes #10872

--- a/main/python2/APKBUILD
+++ b/main/python2/APKBUILD
@@ -4,7 +4,7 @@ pkgname=python2
 # the python2-tkinter's pkgver needs to be synchronized with this.
 pkgver=2.7.15
 _verbase=${pkgver%.*}
-pkgrel=2
+pkgrel=3
 pkgdesc="A high-level scripting language"
 url="http://www.python.org"
 arch="all"
@@ -21,6 +21,7 @@ source="http://www.python.org/ftp/python/$pkgver/Python-$pkgver.tar.xz
 	CVE-2018-14647.patch
 	CVE-2019-9636.patch
 	CVE-2019-9948.patch
+	CVE-2019-16935.patch
 	"
 builddir="$srcdir/Python-$pkgver"
 
@@ -137,4 +138,5 @@ ab8eaa2858d5109049b1f9f553198d40e0ef8d78211ad6455f7b491af525bffb16738fed60fc84e9
 5a8e013a4132d71c4360771f130d27b37275ae59330cf9a75378dc8a11236017f540eb224f2a148984e82ca3fb6b29129375b1080ba05b81044faa717520ab82  unchecked-ioctl.patch
 6ea4cde4483250bd3ecbf46214935c80ecd79958d09d7fab4f5ba0b80d73ff0a1433f7b6fbd9a5c42d4f2a3dda877cde6a3264a5c832c1e8f4ee3eb2405a624e  CVE-2018-14647.patch
 54086e7b4d3597969b945b1460fe578ff3a13289703d58d79b8f00f644eccc4acc11fc6128b7b114f022a6f6cedc91e02eead6373bac0d36e22eb580a1becb53  CVE-2019-9636.patch
-2f9523bd3e39c4831110821d93aef1562ca80708f1b553428eb5c228cdf2192feb13d7aef41097a5df4b4243da8b8f7247f691c0ab73967b0bf2bf6a1a0d487f  CVE-2019-9948.patch"
+2f9523bd3e39c4831110821d93aef1562ca80708f1b553428eb5c228cdf2192feb13d7aef41097a5df4b4243da8b8f7247f691c0ab73967b0bf2bf6a1a0d487f  CVE-2019-9948.patch
+758a897f01665149a23cbc3898fe060c043647d6fe6d22d8ca9038554b4ef1c7b2ac638d37eaed265167cd50f9329be2518f07464dccb7a7ab34ec9be4710095  CVE-2019-16935.patch"
