main/xen: security fixes
CVE-2019-19579 XSA-306
CVE-2019-19582 XSA-307
CVE-2019-19583 XSA-308
CVE-2019-19578 XSA-309
CVE-2019-19580 XSA-310
CVE-2019-19577 XSA-311

ref #11132

--- a/main/xen/APKBUILD
+++ b/main/xen/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: William Pitcock <nenolod@dereferenced.org>
 pkgname=xen
 pkgver=4.11.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Xen hypervisor"
 url="https://www.xenproject.org/"
 arch="x86_64 armhf aarch64" # enable armv7 when builds with gcc8
@@ -167,6 +167,13 @@ options="!strip"
 #     - CVE-2019-11135 XSA-305
 #   4.11.3-r0:
 #     - CVE-2019-19579 XSA-306
+#   4.11.3-r1:
+#     - CVE-2019-19579 XSA-306
+#     - CVE-2019-19582 XSA-307
+#     - CVE-2019-19583 XSA-308
+#     - CVE-2019-19578 XSA-309
+#     - CVE-2019-19580 XSA-310
+#     - CVE-2019-19577 XSA-311
 
 case "$CARCH" in
 x86*)
@@ -233,6 +240,14 @@ source="https://downloads.xenproject.org/release/$pkgname/$pkgver/$pkgname-$pkgv
 	xenqemu-xattr-size-max.patch
 
 	hotplug-Linux-iscsi-block-handle-lun-1.patch
+
+	xsa307.patch
+	xsa308.patch
+	xsa309.patch
+	xsa310-0001-x86-mm-Set-old_guest_table-when-destroying-vcpu-page.patch
+	xsa310-0002-x86-mm-alloc-free_lN_table-Retain-partial_flags-on-E.patch
+	xsa310-0003-x86-mm-relinquish_memory-Grab-an-extra-type-ref-when.patch
+	xsa311-4.11.patch
 
 	xenstored.initd
 	xenstored.confd
@@ -490,6 +505,13 @@ e76816c6ad0e91dc5f81947f266da3429b20e6d976c3e8c41202c6179532eec878a3f0913921ef3a
 69dfa60628ca838678862383528654ecbdf4269cbb5c9cfb6b84d976202a8dea85d711aa65a52fa1b477fb0b30604ca70cf1337192d6fb9388a08bbe7fe56077  xenstore_client_transaction_fix.patch
 2094ea964fa610b2bf72fd2c7ede7e954899a75c0f5b08030cf1d74460fb759ade84866176e32f8fe29c921dfdc6dafd2b31e23ab9b0a3874d3dceeabdd1913b  xenqemu-xattr-size-max.patch
 8c9cfc6afca325df1d8026e21ed03fa8cd2c7e1a21a56cc1968301c5ab634bfe849951899e75d328951d7a41273d1e49a2448edbadec0029ed410c43c0549812  hotplug-Linux-iscsi-block-handle-lun-1.patch
+984185e513e0688edca932f434ace78daf99094b563dc3f6cd1c94c7f60842e860dc9490296a4bc716c42f544e0bdf2e3c58cd46b4b490b61dbbe8389c5674c4  xsa307.patch
+3650ab4d75ba65764edacb379b67c6bc08df5cada0c2b039fd8641f212ba462246ef838dee3390fddd0725cec8676197136ef99dfbd7d9ef1a7c4d78a873639b  xsa308.patch
+ad6468c55c13a259b8baa15f251a77ae5ff0524434201caeb1780ca58e637a9e4be398f264c010913d940a248ca619a6878cd6109180de653afadb923fc38fee  xsa309.patch
+806c3cd3895f6573195d3ae85f314c8b7b7bc9ac4b1663b113e1c7fb8a7d949855fab09ba794b838a1cebdb40017ebfbaed932fd23ee33cc7bef8381a8ed2584  xsa310-0001-x86-mm-Set-old_guest_table-when-destroying-vcpu-page.patch
+6e713158f693c1d38f1044e1e9adea3d9338c47e9c2fec10b95a04a36cbc7c8e2841d593cb6e39b44976b6c29b7eec9919dec738e5fddaedddaaeade220185d8  xsa310-0002-x86-mm-alloc-free_lN_table-Retain-partial_flags-on-E.patch
+bef47261b61f2f9f10d649c8de1ad076517ac5ecea5f26a3a61ded91ced3f274ddeb8a41592edfe7dfd5439b010b647f6c15afeb7cd2b8c6065cd2281413b614  xsa310-0003-x86-mm-relinquish_memory-Grab-an-extra-type-ref-when.patch
+6e786287e21cd8f7371b75b05067428656cc5985ef98902fab577b9dff3a187d130675063db127a9c2210c935b2eb1f6288d784d595c9bdee30f0c904a81afb4  xsa311-4.11.patch
 52c43beb2596d645934d0f909f2d21f7587b6898ed5e5e7046799a8ed6d58f7a09c5809e1634fa26152f3fd4f3e7cfa07da7076f01b4a20cc8f5df8b9cb77e50  xenstored.initd
 093f7fbd43faf0a16a226486a0776bade5dc1681d281c5946a3191c32d74f9699c6bf5d0ab8de9d1195a2461165d1660788e92a3156c9b3c7054d7b2d52d7ff0  xenstored.confd
 3c86ed48fbee0af4051c65c4a3893f131fa66e47bf083caf20c9b6aa4b63fdead8832f84a58d0e27964bc49ec8397251b34e5be5c212c139f556916dc8da9523  xenconsoled.initd
