main/xen: security fixes
CVE-2019-19579 XSA-306
CVE-2019-19582 XSA-307
CVE-2019-19583 XSA-308
CVE-2019-19578 XSA-309
CVE-2019-19580 XSA-310
CVE-2019-19577 XSA-311

closes #11132

--- a/main/xen/APKBUILD
+++ b/main/xen/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: William Pitcock <nenolod@dereferenced.org>
 pkgname=xen
 pkgver=4.10.4
-pkgrel=1
+pkgrel=2
 pkgdesc="Xen hypervisor"
 url="http://www.xen.org/"
 arch="x86_64 armhf aarch64"
@@ -162,6 +162,13 @@ options="!strip"
 #     - CVE-2019-18422 XSA-303
 #     - CVE-2018-12207 XSA-304
 #     - CVE-2019-11135 XSA-305
+#   4.10.4-r2:
+#     - CVE-2019-19579 XSA-306
+#     - CVE-2019-19582 XSA-307
+#     - CVE-2019-19583 XSA-308
+#     - CVE-2019-19578 XSA-309
+#     - CVE-2019-19580 XSA-310
+#     - CVE-2019-19577 XSA-311
 
 case "$CARCH" in
 x86*)
@@ -252,6 +259,15 @@ source="https://downloads.xenproject.org/release/$pkgname/$pkgver/$pkgname-$pkgv
 	xsa304-4.10-3.patch
 	xsa305-4.10-1.patch
 	xsa305-4.10-2.patch
+	xsa306-4.11.patch
+	xsa307.patch
+	xsa308.patch
+	xsa309.patch
+	xsa310-0001-x86-mm-Set-old_guest_table-when-destroying-vcpu-page.patch
+	xsa310-0002-x86-mm-alloc-free_lN_table-Retain-partial_flags-on-E.patch
+	xsa310-0003-x86-mm-relinquish_memory-Grab-an-extra-type-ref-when.patch
+	xsa311-4.10-1.patch
+	xsa311-4.10-2.patch
 
 	xenstored.initd
 	xenstored.confd
@@ -532,6 +548,15 @@ c0149a445a9f6ef4aa0d928ff321afa7ea6f52d96213042f444a9b96912729fa27c5b81c247c56f4
 f7c34c984885f73f51fd3ca0274b7a6b3ca938547b910bb1becc73d7df668b0f9f69d6f402cc3a183a2acff1a9978c2d5775bd2acced4300212568e8ca22d47a  xsa304-4.10-3.patch
 eeca8ad1ec1b13b7d1849b94537d24e8f91eff6fb7b2e406a08accb9ec72ddb48360c90b2a250ffbc628970f00de557fcddacbcf09062a59a36a8b6ffcbf1909  xsa305-4.10-1.patch
 6fc52805ef24510aa5092d1bda61d1299b74c8b37fdca0c17e9df62ec16bb9c7343f09b8dd1f4801c4c5db3b3f6f7208c0c35034ef8aa86b08df308e82597892  xsa305-4.10-2.patch
+c6b6632b553cdd1198f019b3d10de4087cf01e99c9ef1517fc0790db742bad2009544c243cd7743e4fde3e6743ceb852e126f8196412e2befbbf7f66fc27d46d  xsa306-4.11.patch
+984185e513e0688edca932f434ace78daf99094b563dc3f6cd1c94c7f60842e860dc9490296a4bc716c42f544e0bdf2e3c58cd46b4b490b61dbbe8389c5674c4  xsa307.patch
+3650ab4d75ba65764edacb379b67c6bc08df5cada0c2b039fd8641f212ba462246ef838dee3390fddd0725cec8676197136ef99dfbd7d9ef1a7c4d78a873639b  xsa308.patch
+ad6468c55c13a259b8baa15f251a77ae5ff0524434201caeb1780ca58e637a9e4be398f264c010913d940a248ca619a6878cd6109180de653afadb923fc38fee  xsa309.patch
+806c3cd3895f6573195d3ae85f314c8b7b7bc9ac4b1663b113e1c7fb8a7d949855fab09ba794b838a1cebdb40017ebfbaed932fd23ee33cc7bef8381a8ed2584  xsa310-0001-x86-mm-Set-old_guest_table-when-destroying-vcpu-page.patch
+6e713158f693c1d38f1044e1e9adea3d9338c47e9c2fec10b95a04a36cbc7c8e2841d593cb6e39b44976b6c29b7eec9919dec738e5fddaedddaaeade220185d8  xsa310-0002-x86-mm-alloc-free_lN_table-Retain-partial_flags-on-E.patch
+bef47261b61f2f9f10d649c8de1ad076517ac5ecea5f26a3a61ded91ced3f274ddeb8a41592edfe7dfd5439b010b647f6c15afeb7cd2b8c6065cd2281413b614  xsa310-0003-x86-mm-relinquish_memory-Grab-an-extra-type-ref-when.patch
+2b747d8635b333ce56d9f707c2c8d503c2b4390c0318aa489e19c21fded5909f7b7a8f13a6f6b49e24a362858e4c9bef6d10aa62e85e40efa4d48b136b02dadb  xsa311-4.10-1.patch
+e9d55b631add5087fcfb1c4cb6a4c2084e8113480aac25a6ee61312cf3100cad3865a3bb326688d8bf0e899206385f4d87b4b2385c247f491d4a775cff49fe3d  xsa311-4.10-2.patch
 52c43beb2596d645934d0f909f2d21f7587b6898ed5e5e7046799a8ed6d58f7a09c5809e1634fa26152f3fd4f3e7cfa07da7076f01b4a20cc8f5df8b9cb77e50  xenstored.initd
 093f7fbd43faf0a16a226486a0776bade5dc1681d281c5946a3191c32d74f9699c6bf5d0ab8de9d1195a2461165d1660788e92a3156c9b3c7054d7b2d52d7ff0  xenstored.confd
 3c86ed48fbee0af4051c65c4a3893f131fa66e47bf083caf20c9b6aa4b63fdead8832f84a58d0e27964bc49ec8397251b34e5be5c212c139f556916dc8da9523  xenconsoled.initd
