--- a/main/e2fsprogs/APKBUILD
+++ b/main/e2fsprogs/APKBUILD
@@ -14,6 +14,8 @@ subpackages="$pkgname-static $pkgname-dev $pkgname-doc libcom_err $pkgname-libs 
 source="https://www.kernel.org/pub/linux/kernel/people/tytso/e2fsprogs/v$pkgver/e2fsprogs-$pkgver.tar.xz"
 
 # secfixes:
+#   - 1.45.5-r0:
+#     - CVE-2019-5188
 #   - 1.45.4-r0:
 #     - CVE-2019-5094
 
