--- a/main/e2fsprogs/APKBUILD
+++ b/main/e2fsprogs/APKBUILD
@@ -2,28 +2,28 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=e2fsprogs
 pkgver=1.44.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Standard Ext2/3/4 filesystem utilities"
 url="http://e2fsprogs.sourceforge.net"
 arch="all"
 license="GPL-2.0-or-later LGPL-2.0 BSD-3-Clause MIT"
-depends=""
 depends_dev="util-linux-dev"
 options="!check"
 makedepends="$depends_dev linux-headers"
 subpackages="$pkgname-dev $pkgname-doc libcom_err $pkgname-libs $pkgname-extra"
-source="https://www.kernel.org/pub/linux/kernel/people/tytso/$pkgname/v$pkgver/$pkgname-$pkgver.tar.xz
+source="https://www.kernel.org/pub/linux/kernel/people/tytso/e2fsprogs/v$pkgver/e2fsprogs-$pkgver.tar.xz
 	gnuc-prereq.patch
 	CVE-2019-5094.patch
+	CVE-2019-5188.patch
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 # secfixes:
+#   1.44.5-r2:
+#     - CVE-2019-5188
 #   1.44.5-r1:
 #     - CVE-2019-5094
 
-build () {
-	cd "$builddir"
+build() {
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -39,7 +39,6 @@ build () {
 }
 
 package() {
-	cd "$builddir"
 	make -j1 MKDIR_P="install -d"  DESTDIR="$pkgdir" install install-libs
 	mv "$pkgdir"/sbin/* "$pkgdir"/usr/sbin/
 	local i; for i in e2fsck mke2fs mkfs.* fsck.*; do
@@ -72,4 +71,5 @@ extra() {
 }
 sha512sums="c0faec90b2be81460d374c150be917cd6beb1d10dc7cd0c6c4747de19de9af1763e90d48aec5b3c0fbff1b59bf79a35f93536cd52e68d1e45d4db610e158bb2e  e2fsprogs-1.44.5.tar.xz
 155340b6fec21419fa9ca27ff1bd8e12f679013dd82f4dc0cd1feae2dbf143a942d6d4427a1e966e68fa37ecb282880ff5d07a3760ee8d6ac7f7c5e34a276735  gnuc-prereq.patch
-72e7d8199ea071802fbe74fbb2153253e5460412b115e03750ecac46d298aeb73bd8e7610a2d5b8be83b7125080c7e9e23d9b71baee1c7a4f68026344106a922  CVE-2019-5094.patch"
+72e7d8199ea071802fbe74fbb2153253e5460412b115e03750ecac46d298aeb73bd8e7610a2d5b8be83b7125080c7e9e23d9b71baee1c7a4f68026344106a922  CVE-2019-5094.patch
+3147433f58b283faa46ca950921d814de832dc8e33cf5042c7e86078738f256ccf7be40b918ba11a467d04761ffcac85e12a8de4d86e745bca84f0198ba2f176  CVE-2019-5188.patch"
