--- a/main/nginx/APKBUILD
+++ b/main/nginx/APKBUILD
@@ -4,6 +4,8 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 #
 # secfixes:
+#   1.16.1-r5:
+#     - CVE-2019-20372
 #   1.16.1-r0:
 #     - CVE-2019-9511
 #     - CVE-2019-9513
@@ -19,7 +21,7 @@ pkgname=nginx
 # NOTE: Upgrade only to even-numbered versions (e.g. 1.14.z, 1.16.z)!
 # Odd-numbered versions are mainline (development) versions.
 pkgver=1.16.1
-pkgrel=4
+pkgrel=5
 # Revision of nginx-tests to use for check().
 _tests_hgrev=40e5f2a0a238
 _njs_ver=0.3.5
