--- a/main/ansible/APKBUILD
+++ b/main/ansible/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Takuya Noguchi <takninnovationresearch@gmail.com>
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=ansible
-pkgver=2.9.1
+pkgver=2.9.3
 pkgrel=0
 pkgdesc="A configuration-management, deployment, task-execution, and multinode orchestration framework"
 url="https://ansible.com/"
@@ -18,6 +18,9 @@ source="$pkgname-$pkgver.tar.gz::https://releases.ansible.com/ansible/ansible-$p
 	"
 
 # secfixes:
+#   2.9.3-r0:
+#     - CVE-2019-14904
+#     - CVE-2019-14905
 #   2.8.6-r0:
 #     - CVE-2019-14846
 #     - CVE-2019-14856
@@ -53,6 +56,6 @@ package() {
 	install -m644 README.rst "$pkgdir"/usr/share/doc/$pkgname
 }
 
-sha512sums="fdb25017b96475a6c182bba2f32050f0eaa6f22d17f166b98ce0f0cb40fd12dbbc5ede9912624fa4c5d4a8de472b28c2eb2b569700537c7d4b4c568d7e38f21b  ansible-2.9.1.tar.gz
+sha512sums="02cfa2c7c43506dc602e92aed66c920243222b82bc4852f1a4d786cd3ff26fe17eda18d35ac7301cd9bf26366df9b18776e2a27e8d54fc92c3128f52ec7f58e8  ansible-2.9.3.tar.gz
 f44f1492495abe092cd9f91669ccfee65748f43663571361de97c3b1c5c1219d355aa7236179decb73446376018fa81aace7eaeb8c10a83d3cf4e006508533dd  add-lxc-container_shell-option.patch
 d6aa6827acee61d857444a00364f9b057a216a0a6f5217f353e8b8e0118db7aee54b7578a3fb31cb43bfa8e0709db8d43dcdb819eb28a457a692359887dad115  0001-new-module-lbu.patch"
