main/e2fsprogs: fix CVE-2019-5188
ref #11133

--- a/main/e2fsprogs/APKBUILD
+++ b/main/e2fsprogs/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=e2fsprogs
 pkgver=1.44.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Standard Ext2/3/4 filesystem utilities"
 url="http://e2fsprogs.sourceforge.net"
 arch="all"
@@ -14,10 +14,13 @@ makedepends="$depends_dev linux-headers"
 subpackages="$pkgname-dev $pkgname-doc libcom_err $pkgname-libs $pkgname-extra"
 source="https://www.kernel.org/pub/linux/kernel/people/tytso/$pkgname/v$pkgver/$pkgname-$pkgver.tar.xz
 	CVE-2019-5094.patch
+	CVE-2019-5188.patch
 	"
 builddir="$srcdir/$pkgname-$pkgver"
 
 # secfixes:
+#   1.44.2-r2:
+#     - CVE-2019-5188
 #   1.44.2-r1:
 #     - CVE-2019-5094
 
@@ -71,4 +74,5 @@ extra() {
 	mv "$pkgdir"/usr "$subpkgdir"/
 }
 sha512sums="db34be8c2b606da565a46635d9ed859ccc28921c9a494dd90fbe461a400d0411b0ec6582d3a858adc916d68ec5e835814da798f1cb44710b75fc4efe0145eb90  e2fsprogs-1.44.2.tar.xz
-72e7d8199ea071802fbe74fbb2153253e5460412b115e03750ecac46d298aeb73bd8e7610a2d5b8be83b7125080c7e9e23d9b71baee1c7a4f68026344106a922  CVE-2019-5094.patch"
+72e7d8199ea071802fbe74fbb2153253e5460412b115e03750ecac46d298aeb73bd8e7610a2d5b8be83b7125080c7e9e23d9b71baee1c7a4f68026344106a922  CVE-2019-5094.patch
+88178e33f9754e203484d0fdb7abe3488116cde5884fdc4d36155ba7aa5ebda1d05558406ee9c67878c03d1fcfebf19a9bf9b18e41671276a27b593e2ea0fc6d  CVE-2019-5188.patch"
