--- a/main/ansible/APKBUILD
+++ b/main/ansible/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Takuya Noguchi <takninnovationresearch@gmail.com>
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=ansible
-pkgver=2.7.14
+pkgver=2.7.16
 pkgrel=0
 pkgdesc="A configuration-management, deployment, task-execution, and multinode orchestration framework"
 url="https://ansible.com/"
@@ -21,6 +21,10 @@ source="$pkgname-$pkgver.tar.gz::https://releases.ansible.com/ansible/$pkgname-$
 builddir="$srcdir/$pkgname-$pkgver"
 
 # secfixes:
+#   2.7.16-r0:
+#     - CVE-2019-14864
+#     - CVE-2019-14904
+#     - CVE-2019-14905
 #   2.7.14-r0:
 #     - CVE-2019-14846
 #     - CVE-2019-14856
@@ -64,5 +68,5 @@ package() {
 	install -m644 README.rst "$pkgdir"/usr/share/doc/$pkgname
 }
 
-sha512sums="16705c965b03daeb4e6b6a0bccf0be976de60948b88c06e65449d2662dce1fbcbf796ca2b5f6ebe9884d19d918b6ec0e5b0edcb0ef606b7bae61bfa7699c7b92  ansible-2.7.14.tar.gz
+sha512sums="daae5c495f60a6b1b7fbce7c1b964e946ffa85e57791f9e07765aacfea8a490e39e3fad7f319684fc98dcc2e59ed8e9daf058e03a5dfcdf2cd6de5166ecb5767  ansible-2.7.16.tar.gz
 e1bd1affec585abf4556d1f2598df2689c2341fc0ddaec3eadc0a9c6df5725b8ab97092771f2c57da6ecaa72ae1bb5e5ccce55db8c4d74bfc785f611dd5b8c32  add-lxc-container_shell-option.patch"
