main/ansible: security upgrade to 2.8.8 CVE-2019-14864 CVE-2019-14904 CVE-2019-14905

--- a/main/ansible/APKBUILD
+++ b/main/ansible/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Takuya Noguchi <takninnovationresearch@gmail.com>
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=ansible
-pkgver=2.8.6
+pkgver=2.8.8
 pkgrel=0
 pkgdesc="A configuration-management, deployment, task-execution, and multinode orchestration framework"
 url="https://ansible.com/"
@@ -17,6 +17,10 @@ source="$pkgname-$pkgver.tar.gz::https://releases.ansible.com/ansible/$pkgname-$
 	"
 
 # secfixes:
+#   2.8.8-r0:
+#     - CVE-2019-14864
+#     - CVE-2019-14904
+#     - CVE-2019-14905
 #   2.8.6-r0:
 #     - CVE-2019-14846
 #     - CVE-2019-14856
@@ -53,5 +57,5 @@ package() {
 	install -m644 README.rst "$pkgdir"/usr/share/doc/$pkgname
 }
 
-sha512sums="8e29644b4651e72bd3fbd4ca91c2a36b76e5dde9bb445d3c6e0061c315eb66e1bc507729b70d82998c1cbb25f3ef0e20d281ab8354a047193e60bf4831938418  ansible-2.8.6.tar.gz
+sha512sums="fb7705f3d0b8c0ee87d2954cccb7d00e12851693bbe995c062316577f66488f48d8180f11c8d87e025f4082a48ec27f25cb877be4c0ce96ed39951360e8679bd  ansible-2.8.8.tar.gz
 f44f1492495abe092cd9f91669ccfee65748f43663571361de97c3b1c5c1219d355aa7236179decb73446376018fa81aace7eaeb8c10a83d3cf4e006508533dd  add-lxc-container_shell-option.patch"
