community/php7: security upgrade to 7.3.14 (CVE-2020-7059 CVE-2020-7060)

--- a/community/php7/APKBUILD
+++ b/community/php7/APKBUILD
@@ -26,14 +26,14 @@
 
 pkgname=php7
 _pkgreal=php
-pkgver=7.3.13
+pkgver=7.3.14
 pkgrel=0
 _apiver=20180731
 _suffix=${pkgname#php}
 # Is this package the default (latest) PHP version?
 _default_php="yes"
 pkgdesc="The PHP$_suffix language runtime engine"
-url="https://secure.php.net"
+url="https://www.php.net/"
 arch="all"
 license="PHP-3.01 BSD LGPL-2.0-or-later MIT Zend-2.0"
 depends="$pkgname-common"
@@ -182,6 +182,9 @@ case "$CARCH" in
 esac
 
 # secfixes:
+#   7.3.14-r0:
+#     - CVE-2020-7059
+#     - CVE-2020-7060
 #   7.3.13-r0:
 #     - CVE-2019-11045
 #     - CVE-2019-11047
@@ -679,7 +682,7 @@ _mv() {
 	mv $@
 }
 
-sha512sums="9891f8ac809b12389a22233fc98f1aecb6e38e53152688ca9d8d0c785effb5e03d3527b1258e8ad35c1ed730bf8310b13cfaaae961e75d7b962685c083add0e7  php-7.3.13.tar.bz2
+sha512sums="4a58dc5281e9811e49fed94a56d3c97d509d1cab7f3095e0c0e1d689fcec133fd79bffedaf0c937d9dfb9a57d20848efe01e08437862aa55631f4a124afeda0a  php-7.3.14.tar.bz2
 1c708de82d1086f272f484faf6cf6d087af7c31750cc2550b0b94ed723961b363f28a947b015b2dfc0765caea185a75f5d2c2f2b099c948b65c290924f606e4f  php7-fpm.initd
 cacce7bf789467ff40647b7319e3760c6c587218720538516e8d400baa75651f72165c4e28056cd0c1dc89efecb4d00d0d7823bed80b29136262c825ce816691  php7-fpm.logrotate
 274bd7b0b2b7002fa84c779640af37b59258bb37b05cb7dd5c89452977d71807f628d91b523b5039608376d1f760f3425d165242ca75ee5129b2730e71c4e198  php7-module.conf
