--- a/community/php7/APKBUILD
+++ b/community/php7/APKBUILD
@@ -25,14 +25,14 @@
 
 pkgname=php7
 _pkgreal=php
-pkgver=7.2.26
+pkgver=7.2.27
 pkgrel=0
 _apiver=20170718
 _suffix=${pkgname#php}
 # Is this package the default (latest) PHP version?
 _default_php="yes"
 pkgdesc="The PHP$_suffix language runtime engine"
-url="https://secure.php.net"
+url="https://www.php.net/"
 arch="all"
 license="PHP-3.0 BSD LGPL-2.0 MIT Zend"
 depends="$pkgname-common"
@@ -181,6 +181,9 @@ case "$CARCH" in
 esac
 
 # secfixes:
+#   7.2.27-r0:
+#     - CVE-2020-7059
+#     - CVE-2020-7060
 #   7.2.26-r0:
 #     - CVE-2019-11045
 #     - CVE-2019-11047
@@ -676,7 +679,7 @@ _mv() {
 	mv $@
 }
 
-sha512sums="96635185d8d821946e77e229d3e3daefe4f6fb223f08bd36fc9f55f8a16cd7f4a0a2fdc79d8bf3bcb3a66f5231b26053090436efb2f4f1a871dc5aa3c11ccf47  php-7.2.26.tar.bz2
+sha512sums="0d2cdfce73405772f359b231c66e6f64e0584a2b77e8e6e24f0c6bf38d3f3cb77dccc829fd7d0974f20030e875c3de399facce659e2b0293fb1c6336d9a37bed  php-7.2.27.tar.bz2
 1c708de82d1086f272f484faf6cf6d087af7c31750cc2550b0b94ed723961b363f28a947b015b2dfc0765caea185a75f5d2c2f2b099c948b65c290924f606e4f  php7-fpm.initd
 cacce7bf789467ff40647b7319e3760c6c587218720538516e8d400baa75651f72165c4e28056cd0c1dc89efecb4d00d0d7823bed80b29136262c825ce816691  php7-fpm.logrotate
 274bd7b0b2b7002fa84c779640af37b59258bb37b05cb7dd5c89452977d71807f628d91b523b5039608376d1f760f3425d165242ca75ee5129b2730e71c4e198  php7-module.conf
