--- a/community/runc/APKBUILD
+++ b/community/runc/APKBUILD
@@ -5,8 +5,8 @@ pkgname=runc
 pkgdesc="CLI tool for spawning and running containers according to the OCI specification"
 url="https://www.opencontainers.org"
 
-_commit=d736ef14f0288d6993a1845745d6756cfc9ddd5a
-pkgver=1.0.0_rc9
+_commit=dc9208a3303feef5b3839f4323d9beb36df0a9dd
+pkgver=1.0.0_rc10
 pkgrel=0
 
 _ver=v${pkgver/_rc/-rc}
@@ -22,6 +22,8 @@ builddir="$srcdir/src/github.com/opencontainers/runc"
 options="!check"
 
 # secfixes:
+#   1.0.0_rc10:
+#     - CVE-2019-19921
 #   1.0.0_rc9:
 #     - CVE-2019-16884
 #   1.0.0_rc7:
@@ -44,4 +46,4 @@ package() {
 	install -Dm644 "$builddir"/man/man8/* "$pkgdir"/usr/share/man/man8/
 }
 
-sha512sums="e7608e3a3360ec19dea33be4aac69b2f263f9d561699aad5b165927eaf0bd45bd68649e9e115aa978928d88f33fc3448b87601a4d34c4e60afd690c41c03c81f  runc-v1.0.0-rc9.tar.gz"
+sha512sums="0ea1088a072501f11ca3e4a746d9d9f36058f05b9e610b381688f5cab6d712cbc137858c6392329ebed5e9d867351cb5a82bdb5056587060a832589e27f9a88d  runc-v1.0.0-rc10.tar.gz"
