--- a/community/wireshark/APKBUILD
+++ b/community/wireshark/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Jeremy Thomerson <jeremy@thomersonfamily.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=wireshark
-pkgver=3.0.7
+pkgver=3.0.8
 pkgrel=0
 pkgdesc="A network protocol analyzer"
 url="https://www.wireshark.org"
@@ -22,6 +22,8 @@ source="https://www.wireshark.org/download/src/all-versions/wireshark-$pkgver.ta
 	"
 
 # secfixes:
+#   3.0.8-r0:
+#     - CVE-2020-7045
 #   3.0.7-r0:
 #     - CVE-2019-19553
 #   3.0.4-r0:
@@ -244,5 +246,5 @@ tshark() {
 }
 
 
-sha512sums="64e242510865ca69e688677e3ee1f72d3efa2155f07bc1aacc6de19ffab06f26b1ef8a3f91a90e91a6612b10d75651aea6400f8c5852e6a7e82e5d3f3e88e031  wireshark-3.0.7.tar.xz
+sha512sums="a71c4dafb475ac5c2b4c8bb163ac4bc1471e83de8e8c629d1fc9c4fba8276568f6a38071c74a9dc997e66cbc76efe65b76c96e32a1c4b0585e993734c2d85b42  wireshark-3.0.8.tar.xz
 287159576be76fc8afbce450a53f969bbd519321e038c812b96857ca08c352052dbbfaa9208d54ed30d7a0c9ca4192b83c8865de60562c4490d99d75c61ede0b  fix-udpdump.patch"
