--- a/main/opensmtpd/APKBUILD
+++ b/main/opensmtpd/APKBUILD
@@ -3,8 +3,8 @@
 # Contributor: Shiz <hi@shiz.me>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=opensmtpd
-pkgver=6.6.1p1
-pkgrel=2
+pkgver=6.6.2p1
+pkgrel=0
 pkgdesc="Secure, reliable, lean, and easy-to configure SMTP server"
 url="http://www.opensmtpd.org"
 arch="all"
@@ -19,7 +19,6 @@ source="https://www.opensmtpd.org/archives/$pkgname-$pkgver.tar.gz
 	aliases
 	autoconf-decl-checks.patch
 	smtpd.conf.patch
-	6.6.1p1-mail.lmtp.patch
 	"
 options="suid !check"
 
@@ -56,9 +55,8 @@ package() {
 	done
 }
 
-sha512sums="8861c2b3d8560217750482694b007e43226033f31c13efa3e705e8d70a172ee30784ba335587ffc5c27fb356f765c696be7b9055c26bf2cd720cd0aa960861ad  opensmtpd-6.6.1p1.tar.gz
+sha512sums="b0f7ea94514a4a1880a22996064caa7da0a15e6453236ca2f004402125affa80e9d8c25d3e63826b45045305851959bc58c2c855829e46d6967bf6cd13bd1e91  opensmtpd-6.6.2p1.tar.gz
 a53c9854f71e55011566d3c96ce6321e11d00706c4180eb8ec4358b38c97d63cb7fcf3bb3c0b69365a8568a385bdb3ec1bc700d5f4463f8d6695a3d46b283c1d  smtpd.initd
 51d47b34eb3d728daa45f29d6434cc75db28dfa69b6fb3ecd873121df85b296a2d2c81016d765a07778aa26a496e4b29c09a30b82678cf42596a536734b5deca  aliases
 37104cc605569f142ceffa902f200e8a7e9e1114ebe5394ed1eac0ed6ce25454e1610270921c45246de8396eee04b7c8ab5a112a231036a6ef14e7e229b264e3  autoconf-decl-checks.patch
-14ff3d4f56aee3a31551ea535c4a5bf9b760f0f11bc269225d7b176d5031294716133cbf4555a92e76cc6e33de89454435562672ddaf1ab365e61085eb1e4d53  smtpd.conf.patch
-ae5c58974fac4c496a347081aba0ed9c3c0839d82b66bbe3594cd19bbff93ae56b11e8afc5e43d886b2fc40b198460ba6753b3a177950d167154cd10187a7672  6.6.1p1-mail.lmtp.patch"
+14ff3d4f56aee3a31551ea535c4a5bf9b760f0f11bc269225d7b176d5031294716133cbf4555a92e76cc6e33de89454435562672ddaf1ab365e61085eb1e4d53  smtpd.conf.patch"
