--- a/main/pango/APKBUILD
+++ b/main/pango/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=pango
 pkgver=1.44.7
-pkgrel=0
+pkgrel=1
 pkgdesc="A library for layout and rendering of text"
 options="!check" # Some tests fail
 url="https://www.pango.org/"
 arch="all"
 license="LGPL-2.1-or-later"
-depends_dev="pango-tools=$pkgname-r$pkgrel"
+depends_dev="pango-tools=$pkgver-r$pkgrel"
 makedepends="meson cairo-dev expat-dev gobject-introspection-dev help2man
 	fontconfig-dev glib-dev harfbuzz-dev libxft-dev fribidi-dev"
 install="$pkgname.pre-deinstall"
