--- a/main/sudo/APKBUILD
+++ b/main/sudo/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=sudo
-pkgver=1.8.30
+pkgver=1.8.31
 if [ "${pkgver%_*}" != "$pkgver" ]; then
 	_realver=${pkgver%_*}${pkgver#*_}
 else
@@ -22,6 +22,8 @@ source="https://www.sudo.ws/dist/sudo-$_realver.tar.gz
 options="suid"
 
 # secfixes:
+#   1.8.31-r0:
+#     - CVE-2019-18634
 #   1.8.28-r0:
 #     - CVE-2019-14287
 #   1.8.20_p2-r0:
@@ -60,6 +62,6 @@ package() {
 	rm -rf "$pkgdir"/var/run
 }
 
-sha512sums="d44831feabd92d736614239e0e0f086829d84b213c98524fffb4b926a96715b1156538a7ab5e0b6e0db8be67a6e24a1642b3648105b076d23b58c39d0dd947af  sudo-1.8.30.tar.gz
+sha512sums="b9e408a322938c7a712458e9012d8a5f648fba5b23a5057cf5d8372c7f931262595f1575c32c32b9cb1a04af670ff4611e7df48d197e5c4cc038d6b65439a28a  sudo-1.8.31.tar.gz
 f0f462f40502da2194310fe4a72ec1a16ba40f95a821ba9aa6aabaa423d28c4ab26b684afa7fb81c2407cf60de9327bdab01de51b878c5d4de49b0d62645f53c  fix-cross-compile.patch
 1f81f85f9dea6ee7e66d9b180611115cf8945f01cde19f5666ac09c759ae0c9a49fb464672650ec216e43d9159ff97c9ba786d5cae5917642ab1f31c29af8546  SIGUNUSED.patch"
