main/pangomm: update url

--- a/main/pangomm/APKBUILD
+++ b/main/pangomm/APKBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=pangomm
 pkgver=2.42.0
-pkgrel=0
+pkgrel=1
 pkgdesc="C++ bindings for pango"
-url="http://gtkmm.sourceforge.net/"
+url="https://www.gtkmm.org/"
 arch="all"
 license="LGPL-2.1-or-later AND GPL-2.0-or-later"
 makedepends="pango-dev glibmm-dev cairomm-dev"
