--- a/main/sudo/APKBUILD
+++ b/main/sudo/APKBUILD
@@ -8,7 +8,7 @@ if [ "${pkgver%_*}" != "$pkgver" ]; then
 else
 	_realver=$pkgver
 fi
-pkgrel=1
+pkgrel=2
 pkgdesc="Give certain users the ability to run some commands as root"
 url="https://www.sudo.ws/sudo/"
 arch="all"
@@ -19,10 +19,13 @@ source="https://www.sudo.ws/dist/sudo-${_realver}.tar.gz
 	fix-cross-compile.patch
 	SIGUNUSED.patch
 	no-pam-msg.patch::https://www.sudo.ws/repos/sudo/raw-rev/f85ff5ee2caf
+	CVE-2019-18634.patch::https://www.sudo.ws/repos/sudo/raw-rev/4830bdf1a683
 	"
 options="suid"
 
 # secfixes:
+#   1.8.29-r2:
+#     - CVE-2019-18634
 #   1.8.28-r0:
 #     - CVE-2019-14287
 #   1.8.20_p2-r0:
@@ -69,4 +72,5 @@ package() {
 sha512sums="ea780922b2afb47df4df4b533fb355fd916cb18a6bfd13c7ca36a25b03ef585d805648c6fa85692bea363b1f83664ac3bc622f99bcd149b3a86f70522eb4d340  sudo-1.8.29.tar.gz
 f0f462f40502da2194310fe4a72ec1a16ba40f95a821ba9aa6aabaa423d28c4ab26b684afa7fb81c2407cf60de9327bdab01de51b878c5d4de49b0d62645f53c  fix-cross-compile.patch
 1f81f85f9dea6ee7e66d9b180611115cf8945f01cde19f5666ac09c759ae0c9a49fb464672650ec216e43d9159ff97c9ba786d5cae5917642ab1f31c29af8546  SIGUNUSED.patch
-9afcfc841635d5bcf67da292a205633fd7b4202d007dd3992e6e69ce98feb0cd5c8ebcd646ea8b46cdafad59779ae41dc3593b13ad35f9017e6c0c2cdc20ed2d  no-pam-msg.patch"
+9afcfc841635d5bcf67da292a205633fd7b4202d007dd3992e6e69ce98feb0cd5c8ebcd646ea8b46cdafad59779ae41dc3593b13ad35f9017e6c0c2cdc20ed2d  no-pam-msg.patch
+e35d8fd7f3bac47c1fc255e89a8d397ce1cb274bc0151001c596692853de3e4653d09731fee922c81019aebe53fc1197fc1a6c996f30e2d297e05e0cf3a26b97  CVE-2019-18634.patch"
