main/sudo: fix CVE-2019-14287

--- a/main/sudo/APKBUILD
+++ b/main/sudo/APKBUILD
@@ -8,7 +8,7 @@ if [ "${pkgver%_*}" != "$pkgver" ]; then
 else
 	_realver=$pkgver
 fi
-pkgrel=2
+pkgrel=3
 pkgdesc="Give certain users the ability to run some commands as root"
 url="https://www.sudo.ws/sudo/"
 arch="all"
@@ -21,10 +21,15 @@ source="https://www.sudo.ws/dist/sudo-${_realver}.tar.gz
 	fix-tests.patch
 	libcrypt.patch
 	musl-fix-headers.patch
+	CVE-2019-14287.patch
 	"
 options="suid"
 
 # secfixes:
+#   1.8.23-r3:
+#   - CVE-2019-14287
+#   1.8.25_p1-r3:
+#   - CVE-2019-14287
 #   1.8.20_p2-r0:
 #   - CVE-2017-1000368
 
@@ -69,4 +74,5 @@ sha512sums="a9d61850a4857bfd075547a13efb13b054e4736e3ebe3c8a98a90a090b1d9b968835
 f0f462f40502da2194310fe4a72ec1a16ba40f95a821ba9aa6aabaa423d28c4ab26b684afa7fb81c2407cf60de9327bdab01de51b878c5d4de49b0d62645f53c  fix-cross-compile.patch
 b2d7816d334826545420c578114e5af361ced65c00e5bfc2e0b16f3c9325aa9d2b902defeebb181da3cf7bc6aba3a59a496293d2f11d83c9793f11138ba50343  fix-tests.patch
 5ad20254aa587ef615f794081ecd55344eada5cf8c1a1d7956cc3f73375554716c483eeb74081da9a8501afce92cfbaf2abe59d1067aac67ce6e4874eb5a23e1  libcrypt.patch
-113416fed7532c6092687c8bdd9913d04888d2f0a32e4333dd27a6b3d39145717ad5c3b3f05ba11bd6462612a9a013d446d254d50b2b651c33eeebe670f41ab5  musl-fix-headers.patch"
+113416fed7532c6092687c8bdd9913d04888d2f0a32e4333dd27a6b3d39145717ad5c3b3f05ba11bd6462612a9a013d446d254d50b2b651c33eeebe670f41ab5  musl-fix-headers.patch
+347431718717ff00f11375df4c039e778be3f873014f68586054915bca9f818f8fd000ea256ac97739026bc36f32dd771afc69c290ee9f6ae7aa29752b2328e1  CVE-2019-14287.patch"
