--- a/community/webkit2gtk/APKBUILD
+++ b/community/webkit2gtk/APKBUILD
@@ -59,6 +59,10 @@ source="https://webkitgtk.org/releases/webkitgtk-$pkgver.tar.xz
 builddir="$srcdir/webkitgtk-$pkgver"
 
 # secfixes:
+#   2.26.3-r0:
+#     - CVE-2019-8835
+#     - CVE-2019-8844
+#     - CVE-2019-8846
 #   2.26.2-r0:
 #     - CVE-2019-8812
 #     - CVE-2019-8814
