main/openjpeg: secfixes (CVE-2020-6851,CVE-2020-8112)
fixes #11189

--- a/main/openjpeg/APKBUILD
+++ b/main/openjpeg/APKBUILD
@@ -1,8 +1,7 @@
-# Contributor: 
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=openjpeg
 pkgver=2.3.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Open-source implementation of JPEG2000 image codec"
 url="https://www.openjpeg.org/"
 arch="all"
@@ -11,7 +10,10 @@ license="BSD-2-Clause-NetBSD"
 makedepends="libpng-dev tiff-dev lcms2-dev doxygen cmake"
 subpackages="$pkgname-dev $pkgname-tools"
 source="$pkgname-$pkgver.tar.gz::https://github.com/uclouvain/openjpeg/archive/v$pkgver.tar.gz
-	fix-cmakelists.patch"
+	fix-cmakelists.patch
+	CVE-2020-6851.patch
+	CVE-2020-8112.patch
+	"
 builddir="${srcdir}/$pkgname-$pkgver"
 
 build() {
@@ -24,6 +26,9 @@ build() {
 }
 
 # secfixes:
+#   2.3.1-r3:
+#     - CVE-2020-6851
+#     - CVE-2020-8112
 #   2.3.0-r3:
 #     - CVE-2018-5785
 #   2.3.0-r2:
@@ -58,4 +63,6 @@ tools() {
 }
 
 sha512sums="339fbc899bddf2393d214df71ed5d6070a3a76b933b1e75576c8a0ae9dfcc4adec40bdc544f599e4b8d0bc173e4e9e7352408497b5b3c9356985605830c26c03  openjpeg-2.3.1.tar.gz
-b50cd382d08647db18f202769aae7df87613a18143a30e360e8f00aba1ec1b7fd0a153685dbea3950bc5623b06c314326777c4fb7aff56adfc6b17bc74c933e5  fix-cmakelists.patch"
+b50cd382d08647db18f202769aae7df87613a18143a30e360e8f00aba1ec1b7fd0a153685dbea3950bc5623b06c314326777c4fb7aff56adfc6b17bc74c933e5  fix-cmakelists.patch
+c8ffc926d91392b38250fd4e00fff5f93fbf5e17487d0e4a0184c9bd191aa2233c5c5dcf097dd62824714097bba2d8cc865bed31193d1a072aa954f216011297  CVE-2020-6851.patch
+9659e04087e0d80bf53555e9807aae59205adef2d49d7a49e05bf250c484a2e92132d471ec6076e57ca69b5ce98fd81462a6a8c01205ca7096781eec06e401cc  CVE-2020-8112.patch"
