--- a/main/libxml2/APKBUILD
+++ b/main/libxml2/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Carlo Landmeter <clandmeter@gmail.com>
 pkgname=libxml2
 pkgver=2.9.10
-pkgrel=1
+pkgrel=2
 pkgdesc="XML parsing library, version 2"
 url="http://www.xmlsoft.org/"
 arch="all"
@@ -14,10 +14,13 @@ subpackages="$pkgname-dbg $pkgname-doc $pkgname-dev $pkgname-utils
 	py3-$pkgname:_py3"
 options="!strip"
 source="http://xmlsoft.org/sources/libxml2-$pkgver.tar.gz
+	libxml2-CVE-2020-7595.patch::https://gitlab.gnome.org/GNOME/libxml2/commit/0e1a49c8907645d2e155f0d89d4d9895ac5112b5.patch
 	revert-Make-xmlFreeNodeList-non-recursive.patch
 	"
 
 # secfixes:
+#   2.9.8-r2:
+#   - CVE-2020-7595
 #   2.9.8-r1:
 #   - CVE-2018-9251
 #   - CVE-2018-14404
@@ -102,4 +105,5 @@ utils() {
 }
 
 sha512sums="0adfd12bfde89cbd6296ba6e66b6bed4edb814a74b4265bda34d95c41d9d92c696ee7adb0c737aaf9cc6e10426a31a35079b2a23d26c074e299858da12c072ed  libxml2-2.9.10.tar.gz
+90db832e60c700e971669f57a54fdb297660c42602089b4e77e013a7051c880f380f0c98c059d9f54de99855b2d9be78fcf0639443f3765a925b52fc093fb4d9  libxml2-CVE-2020-7595.patch
 347178e432379d543683cba21b902e7305202c03e8dbd724ae395963d677096a5cfc4e345e208d498163ca5174683c167610fc2b297090476038bc2bb7c84b4f  revert-Make-xmlFreeNodeList-non-recursive.patch"
