testing/thunderbird: upgrade to 68.5.0
CVE fixes:
CVE-2020-6793
CVE-2020-6794
CVE-2020-6795
CVE-2020-6797
CVE-2020-6798
CVE-2020-6792
CVE-2020-6800

--- a/testing/thunderbird/APKBUILD
+++ b/testing/thunderbird/APKBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Joseph Benden <joe@benden.us>
 
 pkgname=thunderbird
-pkgver=68.4.1
+pkgver=68.5.0
 _pkgver=$pkgver
 _xulver=$pkgver
-pkgrel=2
+pkgrel=0
 pkgdesc="Thunderbird email client"
 url="https://www.thunderbird.net/"
 arch="all !s390x !armhf" # limited by rust and cargo. Fails on armhf due to bad assembly
@@ -90,6 +90,16 @@ source="https://ftp.mozilla.org/pub/thunderbird/releases/$pkgver/source/thunderb
 	fd6847c9416f9eebde636e21d794d25d1be8791d.patch
 	thunderbird.desktop
 	"
+# secfixes:
+#   68.5.0-r0:
+#     - CVE-2020-6793
+#     - CVE-2020-6794
+#     - CVE-2020-6795
+#     - CVE-2020-6797
+#     - CVE-2020-6798
+#     - CVE-2020-6792
+#     - CVE-2020-6800
+
 _mozappdir=/usr/lib/$pkgname
 
 # help our shared-object scanner to find the libs
@@ -293,7 +303,7 @@ END
 		"$pkgdir/usr/lib/$pkgname/thunderbird-bin"
 }
 
-sha512sums="16cccbc2313472e6312e842a28079782238cb22e72b324bebaffefa4a2fe68fec9f2173f2c83f1caccc5522ab9145884b2e2a58e97e236f7aefa4c61764e08b7  thunderbird-68.4.1.source.tar.xz
+sha512sums="bb58a398f24d89eac5b1816f9d16edadbe65cdac6542e1f6798424c7ea18eb2d4ca46bb03f54c8c365e67d1dec44d3dfb36fbe4f85afe9ad80fbcc1f2984084b  thunderbird-68.5.0.source.tar.xz
 0b3f1e4b9fdc868e4738b5c81fd6c6128ce8885b260affcb9a65ff9d164d7232626ce1291aaea70132b3e3124f5e13fef4d39326b8e7173e362a823722a85127  stab.h
 3e57b2541f3889a1cf701860c8bf299f294cb077b0e8cfffda271cf02d1f59b25a697485d0df66e847e47f795b1ace54488a84a42851f2f8587717335537b44d  disable-ccache-stats.patch
 2f4f15974d52de4bb273b62a332d13620945d284bbc6fe6bd0a1f58ff7388443bc1d3bf9c82cc31a8527aad92b0cd3a1bc41d0af5e1800e0dcbd7033e58ffd71  fix-fortify-system-wrappers.patch
