main/ppp: security fix
fixes CVE-2020-8597

--- a/main/ppp/APKBUILD
+++ b/main/ppp/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=ppp
 pkgver=2.4.7
-pkgrel=6
+pkgrel=7
 pkgdesc="A daemon which implements the PPP protocol for dial-up networking"
 url="http://www.samba.org/ppp/"
 arch="all"
@@ -26,11 +26,17 @@ source="https://ftp.samba.org/pub/ppp/ppp-$pkgver.tar.gz
 	musl-fix-headers.patch
 	fix-paths.patch
 	0011-build-sys-don-t-put-connect-errors-log-to-etc-ppp.patch
+	fix-bound-check-eap.patch
 	ip-down
 	ip-up
 	pppd.initd"
 
 _builddir="$srcdir"/$pkgname-$pkgver
+
+# secfixes:
+#   2.4.8-r1:
+#     - CVE-2020-8597
+
 prepare() {
 	local i
 	cd "$_builddir"
@@ -177,6 +183,7 @@ fccc7a6809ae4a617796ccf1d2132de8edb1cc0c71d76a95393585a5970b92be2a54da558702db35
 2f071ea9db15e4abf1bed6cce8130dc81b710a31bfef5fa8f9370c353f845dbc47674b1551b8e040478e5156add6f98d480530206125e8bb308f0f4288d1eec6  musl-fix-headers.patch
 8384afb992a98a7f97b484866e6aa1b1de51e901d7837f84f7ce2beba6815591450fab43957f03b65804424c4940c59640a9cd878979240a171aa77427e9c4ff  fix-paths.patch
 b490971d03fef4de66b61123f80a0087270bcb88466ae8ed98ea9a08b35d4c7c46b2dadd304e2970a4206bb5760a14370d7e3873de6240119d88e927ecef840c  0011-build-sys-don-t-put-connect-errors-log-to-etc-ppp.patch
+ba0c062f93400008ddf47897ac2ab6a2f5017bc7f4167d1a93dd3a5c04068a922490eb4082b0da80f0c3aea6c87fdfbca3568548724a0abc148588ab86a6df32  fix-bound-check-eap.patch
 160260bd2a788beaac395eadb38efbfd1e0e1a458fe151555acacf2c4f3a12381d644672c664f9793db6e3459a4f05a54e3ff6d407b0d37e8014b15bd0f11bcc  ip-down
 8258c95a6b6e8e94d6001b5cd3a99bd3270f29ba0f2e5050a26c8d5f1b67eead8d039e71ce86a784d45e620047b0a2bb14b258d80a9ea62084ba588a4c2e2d84  ip-up
 bd6f43588b037367ffdb57f5e331492dcaa5969003e219c2dc8b90e6be1aa407282ff6114b91d1379ebeff766983fa0622456520cc0ac592b4f0b1496acf21bf  pppd.initd"
