community/weechat: update secfix for CVE-2020-8955

--- a/community/weechat/APKBUILD
+++ b/community/weechat/APKBUILD
@@ -40,6 +40,8 @@ source="https://www.weechat.org/files/src/weechat-$pkgver.tar.gz"
 #   - CVE-2017-8073
 #   1.9.1-r0:
 #   - CVE-2017-14727
+#   2.7.1-r0:
+#   - CVE-2020-8955
 
 build() {
 	mkdir -p build
