community/weechat: security upgrade to 2.7.1 (CVE-2020-8955)

--- a/community/weechat/APKBUILD
+++ b/community/weechat/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=weechat
-pkgver=2.7
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A fast, light, extensible ncurses-based chat client"
 url="https://weechat.org"
@@ -39,6 +39,8 @@ source="https://www.weechat.org/files/src/weechat-$pkgver.tar.gz"
 #   - CVE-2017-8073
 #   1.9.1-r0:
 #   - CVE-2017-14727
+#   2.7.1-r0:
+#   - CVE-2020-8955
 
 build() {
 	mkdir -p build
@@ -81,4 +83,4 @@ check() {
 	./tools/build-test.sh cmake
 }
 
-sha512sums="7a9205b6a3b7e338b14708e1b9aad4f2099506c46b1e86faf4fa94a105bc20b056a53ce3d003ae31ea1cdbab711ddd9dca7258a7d03f0f7af3703ebdbdfeb3d9  weechat-2.7.tar.gz"
+sha512sums="2d2f555a4c48dbfa60a97845657e041fcd37bdde01974b4a49ff2d0ef6b92f16147f84b0e60772e9f54ba3e05ae1772012d3551a5fbb8bdf8332a08ef63a352d  weechat-2.7.1.tar.gz"
