--- a/community/librsvg/APKBUILD
+++ b/community/librsvg/APKBUILD
@@ -12,8 +12,11 @@ options="!check" # Failing
 subpackages="$pkgname-dev $pkgname-doc"
 makedepends="$depends_dev bzip2-dev cairo-dev glib-dev cargo rust vala
 	gobject-introspection-dev gtk+3.0-dev libcroco-dev libgsf-dev"
-source="https://download.gnome.org/sources/librsvg/${pkgver%.*}/librsvg-$pkgver.tar.xz
-	"
+source="https://download.gnome.org/sources/librsvg/${pkgver%.*}/librsvg-$pkgver.tar.xz"
+
+# secfixes:
+#   2.46.2-r0:
+#     - CVE-2019-20446
 
 build() {
 	./configure \
