--- a/main/pango/APKBUILD
+++ b/main/pango/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=pango
 pkgver=1.44.7
-pkgrel=1
+pkgrel=2
 pkgdesc="A library for layout and rendering of text"
 options="!check" # Some tests fail
 url="https://www.pango.org/"
@@ -26,6 +26,7 @@ build() {
 	cd "$srcdir"/$pkgname-$pkgver
 	meson  \
 		--prefix=/usr \
+		--buildtype=plain \
 		-Dintrospection=true \
 		-Dgtk_doc=false \
 		build
